--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,12 @@
 header h1 {
   font-size: 25px;
 }
+
 header .view {
   display: none;
+}
+
+#travaillons-ensemble > p {
+  background: rgba(255, 255, 0, 0.57);
+  padding: 5px;
 }
