--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,7 @@ header .view {
   display: none;
 }
 
-#travaillons-ensemble > p {
+#travaillons-ensemble ~ p {
   background: rgba(255, 255, 0, 0.57);
   padding: 5px;
 }
